--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -126,7 +126,7 @@ jobs:
       run: |
         cd openwrt/bin/targets/*/*
         rm -rf packages
-        zip -q -r openwrt/bin/targets/package.zip openwrt/bin/packages
+        zip -q -r /workdir/openwrt/bin/targets/package.zip /workdir/openwrt/bin/packages
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "::set-output name=status::success"
 
