--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -127,8 +127,7 @@ jobs:
         mkdir -p release/firmware
         cp -rf $(find bin/packages/ -type f -name "*.ipk") release/ipk
         ls release/ipk -l | grep ^[^d] | awk '{print $9}' >> release/releaseIPK.txt
-        cp bin/targets/*/*/openwrt-x86-64-generic-squashfs-combined-efi.img.gz release/
-        cp bin/targets/*/*/openwrt-x86-64-generic-squashfs-combined.img.gz release/
+        cp -r bin/targets/*/*/ release/
         pushd release/ipk
         zip -q -r ../package.zip *
         popd
